apps/system-tools/velero-ui-ingress/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: velero-ui
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - velero.support4u.se
      secretName: velero-ui-tls
  rules:
    - host: velero.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: velero-ui
                port:
                  number: 3000
